--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1 {
 
 .piece {
   cursor: grab;
-  background-image: url("https://image.makewebeasy.net/makeweb/0/wLFHGvpEg/Content/018_Chicken02.jpg?v=202405291424");
+  background-image: url("https://uhdmax.net/wp-content/uploads/2025/07/1-1-4.jpg");
   opacity: 0.9;
   transition: transform 0.2s ease;
 }
@@ -82,3 +82,4 @@ h1 {
     opacity: 1;
   }
 }
+
